--- a/Damiano_Civiletto/view/theme/Front_Office_View/post.twig
+++ b/Damiano_Civiletto/view/theme/Front_Office_View/post.twig
@@ -79,7 +79,7 @@
                       <div class="sidebar-box">
                           <img src="images/Damiano_Civiletto_thumbnail.jpeg" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
                           <h3 class="text-black">L'Autore</h3>
-                          <p>Damiano Civiletto, classe 1975, laureato all'Università degli Studi di Palermo nel 2005 Da diversi anni si occupa di diversi progetti a livello regionale</p>
+                          <p>Damiano Civiletto, classe 1975, laureato all'Università degli Studi di Palermo nel 2005 Da diversi anni mi occupo di diversi progetti a livello regionale</p>
                           <p><a href="about" class="btn btn-primary btn-md text-white">Scopri di più</a></p>
                       </div>
                   </div>
