--- a/Damiano_Civiletto/view/theme/Front_Office_View/front_layout.twig
+++ b/Damiano_Civiletto/view/theme/Front_Office_View/front_layout.twig
@@ -103,7 +103,7 @@
             <div class="row">
               <div class="col-md-5">
                 <h2 class="footer-heading mb-3">Chi sono</h2>
-                <p>Damiano Civiletto Lorem Ipsum da completare </p>
+                <p>Damiano Civiletto, classe 1975, laureato all'Università degli Studi di Palermo nel 2005 Da diversi anni mi occupo di diversi progetti a livello regionale</p>
 
               </div>
               <div class="col-md-4 ml-auto">
