--- a/Damiano_Civiletto/view/theme/Back_Office_View/Connection/ChangePassword.twig
+++ b/Damiano_Civiletto/view/theme/Back_Office_View/Connection/ChangePassword.twig
@@ -20,25 +20,25 @@
    <div>
 
 <div><br><br><br>
-   <div class="container" style="margin-left: 30%; margin-right: 70%">
+   <div class="container">
       <div class="row">
-         <div class="col-md-3">
-         <form class="form-inline" method="post" action="adminChangePassword"  style="width: 100%">
+         <div class="col-md-3" style="margin-left: auto; margin-right: auto;">
+         <form method="post" action="adminChangePassword">
             <div>
             <label class="sr-only" for="inlineFormInputGroup">E-mail</label>
-               <input style="width: 200%" type="email" name="email"  class="form-control mb4 mr-sm-4 mb-sm-0" id="inlineFormInputGroup" placeholder="E-mail">
+               <input type="email" name="email"  class="form-control-lg mb4 mr-sm-4 mb-sm-0" id="inlineFormInputGroup" placeholder="E-mail" required>
             </div><br>
             <div>
             <label class="sr-only" for="inlineFormInput">Password</label>
-            <input style="width: 200%" type="password" name="password" class="form-control mb-4 mr-sm-4 mb-sm-0" id="inlineFormInput" placeholder="Password">
+            <input type="password" name="password" class="form-control-lg mb-4 mr-sm-4 mb-sm-0" id="inlineFormInput" placeholder="Password" required>
             </div><br>
             <div>
             <label class="sr-only" for="inlineFormInput">Nuova Password</label>
-            <input style="width: 200%" type="password" name="new_pass" class="form-control mb-4 mr-sm-4 mb-sm-0" id="inlineFormInput" placeholder=" Nuova password">
+            <input type="password" name="new_pass" class="form-control-lg mb-4 mr-sm-4 mb-sm-0" id="inlineFormInput" placeholder=" Nuova password" required>
             </div><br>
             <div>
                <label class="sr-only" for="inlineFormInput">Conferma password</label>
-               <input style="width: 200%"type="password" name="re_pass" class="form-control mb4 mr-sm-4 mb-sm-0" id="inlineFormInput" placeholder="Conferma password">
+               <input type="password" name="re_pass" class="form-control-lg mb4 mr-sm-4 mb-sm-0" id="inlineFormInput" placeholder="Conferma password" required>
             </div>
 
             <br>
