--- a/Damiano_Civiletto/view/theme/Front_Office_View/services.twig
+++ b/Damiano_Civiletto/view/theme/Front_Office_View/services.twig
@@ -18,7 +18,7 @@
               <span class="img-wrap mb-5">
                 <img src="img/services_images/{{ service.file_name }}"  alt="Image" class="img-fluid">
               </span>
-              <h3 class="mb-4"><a href="#">{{ service.title }}</a></h3>
+              <h3 class="mb-4">{{ service.title }}</h3>
               <p>{{ service.content }}</p>
             </div>
           </div>
