--- a/Damiano_Civiletto/view/theme/Back_Office_View/back_layout.twig
+++ b/Damiano_Civiletto/view/theme/Back_Office_View/back_layout.twig
@@ -60,7 +60,7 @@
         </div>
         <div class="col-lg-4 text-center">
           <div class="site-logo">
-            <a href="admonHome"><span style="text-transform: uppercase">DC</span></a>
+            <a href="adminHome"><span style="text-transform: uppercase">DC</span></a>
           </div>
 
 
