--- a/Damiano_Civiletto/view/theme/Back_Office_View/AddProject.twig
+++ b/Damiano_Civiletto/view/theme/Back_Office_View/AddProject.twig
@@ -9,7 +9,7 @@
     <div align="center">
         <form action="adminAddProject" enctype="multipart/form-data" method="POST">
             <label for="image" style="margin-left: 10%">Scegli un'immagine di copertina</label>
-            <input type="file" name="image" accept="image/*" id="image">
+            <input type="file" name="image" accept="image/*" id="image" required>
             <br> <br>
             <label for="title">Titolo</label><br>
             <input type="text" name="title" id="title"><br><br>
