--- a/Damiano_Civiletto/view/theme/Back_Office_View/AddProject.twig
+++ b/Damiano_Civiletto/view/theme/Back_Office_View/AddProject.twig
@@ -12,7 +12,7 @@
             <input type="file" name="image" accept="image/*" id="image" required>
             <br> <br>
             <label for="title">Titolo</label><br>
-            <input type="text" name="title" id="title"><br><br>
+            <input type="text" name="title" id="title" required><br><br>
             <label for="city">Città</label><br>
             <input type="text" name="city" id="city"><br><br>
             <label for="content">Descrizione</label><br>
